# aio-smartshunt

./: LICENSE  README.md  pyproject.toml
src/aio_smartshunt/: __init__.py  cw20.py
tests/: __init__.py  test_cw20.py
tests/data/: cw20_bms.json
